--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -2,13 +2,16 @@
 <html>
 <head>
   <meta charset=utf-8 />
-  <title> CV de Fernando Vega Giganto</title>
+  <title> Fernando Vega Giganto</title>
   <link href="media/cv-screen.css" type="text/css" rel="stylesheet" media="screen">
   <link href="media/cv-print.css" type="text/css" rel="stylesheet" media="print">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
 
   <!-- imports -->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+
+  <link rel="shortcut icon" href="images/favicon.ico">
 </head>
 <body>
   <div id="main">
@@ -18,6 +21,8 @@
   </div>
 
   <div class="footer"></div>
-
+    {% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+    {% endif %}
 </body>
 </html>
