--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title }}</title>
+    <title> CV Fernando Vega Giganto </title>
     <link rel="stylesheet" href="/media/gallery.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700" media="all">
+    <link rel="shortcut icon" href="images/favicon.ico">
   </head>
   <body>
 
@@ -19,5 +21,8 @@
     <footer>
         <h5> Fernando Vega Giganto</h5>
     </footer>
+    {% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+    {% endif %}
   </body>
 </html>
